Sat, 23 Feb 2008 14:18:53 +0100 <thp@perli.net>
Set the xterm title when running "make test"

	* Makefile: Set the xterm title when running "make test"

Wed, 20 Feb 2008 13:38:58 +0100 <thp@perli.net>
Estimated time left and synchronization support for tray icon by Jérôme Chabod

	* src/gpodder/gui.py: Send update status information to the tray icon
	on update; add glue code for synchronization device and tray icon
	* src/gpodder/trayicon.py: Add status and tooltip during device
	synchronization; add estimated download time to tooltip during
	download; set the correct caption for the synchronization menu item in
	the tray icon (and don't add a synchronize menu item when not needed);
	some small code-cleanups and fixes
	* src/gpodder/util.py: Add format_seconds_to_hour_min_sec() function
	that converts a numeric amount of seconds into a human-readable string

Tue, 19 Feb 2008 07:46:28 +0100 <thp@perli.net>
Fix bug with MP3 player synchronization file name encodings

	* src/gpodder/sync.py: Apply patch to fix problems with native
	language encodings on MP3 player synchronization; thanks to Bernd
	Schlapsi for reporting the problem in Bugzilla
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=34)

Mon, 18 Feb 2008 21:17:48 +0100 <thp@perli.net>
Updated French translation for 0.11.0

	* data/po/fr.po: Updated French translation by Jérôme Chabod

Sun, 17 Feb 2008 13:50:09 +0100 <thp@perli.net>
Fix calculation of average percentage done

	* src/gpodder/services.py: Fix calculation of average percentage done
	for downloads, thanks to Jérôme Chabod <jerome.chabod@ifrance.com> for
	the patch

Sun, 17 Feb 2008 13:33:38 +0100 <thp@perli.net>
Updated translations for 0.11.0

	* data/messages.pot: Refreshed messages.pot from source code
	* data/po/de.po: Updated German translation
	* data/po/nl.po: Updated Dutch translation by Pieter De Decker
	* data/po/ru.po: Updated Russian translation by Leonid Ponomarev
	* data/po/cs.po: Updated Czech translation by Ondrej Vesely